# bevy-chase-me-game

./: .gitignore  Cargo.toml  README.md  chase-me-8c8c41499351b4e6.js  index.html
.cargo/: config.toml
.github/workflows/: deploy-pages.yaml  docs.yaml  release.yaml  rust.yml
docs/: template.md
src/: assets.rs  dev_tools.rs  lib.rs  main.rs  plugins.rs  utils.rs  window.rs
src/common/: better_button.rs  mod.rs  styles.rs
src/components/: mod.rs
src/game/: collisions.rs  enemy.rs  events.rs  level.rs  mod.rs  movement.rs  particles.rs  pig.rs  player.rs  resources.rs  state.rs  walls.rs
src/game/enemy/: mod.rs  resources.rs  systems.rs
src/game/views/: mod.rs  options.rs  pause.rs  prep.rs  score.rs  summary.rs
src/menu/: menu_view.rs  mod.rs
src/plugins/: mod.rs  pig.rs  player.rs  ui.rs
src/resources/: mod.rs
src/screens/: credits.rs  loading.rs  mod.rs  pause.rs  playing.rs  prep.rs  splash.rs  summary.rs  title.rs
src/systems/: mod.rs  pig.rs  player.rs
src/theme/: interaction.rs  widgets.rs
web/: index.html
