[package]
name = "bevy-arcade-exploration"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

[dependencies]
bevy = { version = "0.13.1" }
bevy-inspector-egui = "0.23.4"
bevy_prototype_lyon = "0.11.0"
bevy_rapier2d = { version = "0.25.0", features = [
    "debug-render-2d",
    "wasm-bindgen",
] }
rand = "0.8.5"
belly = { git = "https://github.com/jkb0o/belly.git", branch = "main" }
